clusterloader2/testing/load/example-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2023-06-12T18:23:05Z"
  generation: 1
  labels:
    group: deployment-churn
  name: deployment-churn-999
  namespace: test-cedlai-1
  resourceVersion: "31226811"
  uid: e96c9a2b-bebb-40d2-9c6f-856a7e2ebc56
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: deployment-churn-999
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        group: deployment-churn
        name: deployment-churn-999
        svc: large-service-999
    spec:
      containers:
      - env:
        - name: ENV_VAR
          value: a
        image: mcr.microsoft.com/oss/kubernetes/pause:3.6
        imagePullPolicy: IfNotPresent
        name: deployment-churn-999
        resources:
          requests:
            cpu: 10m
            memory: 50M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 900
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 900
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-06-12T18:23:37Z"
    lastUpdateTime: "2023-06-12T18:23:37Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-06-12T18:23:11Z"
    lastUpdateTime: "2023-06-12T18:23:37Z"
    message: ReplicaSet "deployment-churn-999-868cf74b57" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
