clusterloader2/testing/load/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/default-container: deployment-churn-999
    kubectl.kubernetes.io/default-logs-container: deployment-churn-999
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
    sidecar.istio.io/status: '{"initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null,"revision":"asm-1-17"}'
  creationTimestamp: "2023-06-12T18:23:17Z"
  generateName: deployment-churn-999-868cf74b57-
  labels:
    group: deployment-churn
    name: deployment-churn-999
    pod-template-hash: 868cf74b57
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: deployment-churn-999
    service.istio.io/canonical-revision: latest
    svc: large-service-999
  name: deployment-churn-999-868cf74b57-856lv
  namespace: test-cedlai-1
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: deployment-churn-999-868cf74b57
    uid: 46aa4b2b-ed15-4b8a-85c3-ee8610f9f93c
  resourceVersion: "31217908"
  uid: f3be5308-ba01-4a86-b3a8-a3c4e5a29320
spec:
  containers:
  - env:
    - name: ENV_VAR
      value: a
    image: mcr.microsoft.com/oss/kubernetes/pause:3.6
    imagePullPolicy: IfNotPresent
    name: deployment-churn-999
    resources:
      requests:
        cpu: 10m
        memory: 50M
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-b9t9n
      readOnly: true
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --log_output_level=default:info
    - --concurrency
    - "2"
    image: mcr.microsoft.com/oss/istio/proxyv2:1.17.2-distroless
    imagePullPolicy: IfNotPresent
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 30
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      initialDelaySeconds: 1
      periodSeconds: 2
      successThreshold: 1
      timeoutSeconds: 3
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/workload-spiffe-uds
      name: workload-socket
    - mountPath: /var/run/secrets/credential-uds
      name: credential-socket
    - mountPath: /var/run/secrets/workload-spiffe-credentials
      name: workload-certs
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-b9t9n
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: aks-userpool-37620802-vmss0000ar
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 900
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 900
  - effect: NoSchedule
    key: node.kubernetes.io/memory-pressure
    operator: Exists
  volumes:
  - emptyDir: {}
    name: workload-socket
  - emptyDir: {}
    name: credential-socket
  - emptyDir: {}
    name: workload-certs
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - emptyDir: {}
    name: istio-data
  - downwardAPI:
      defaultMode: 420
      items:
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      defaultMode: 420
      name: istio-ca-root-cert
    name: istiod-ca-cert
  - name: kube-api-access-b9t9n
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-06-12T18:23:19Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-06-12T18:23:24Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-06-12T18:23:24Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-06-12T18:23:17Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://c371a4d0be0946ebf28e01f8201c24fe6a056ac4cc59d46a618b1f9260ea5cc4
    image: mcr.microsoft.com/oss/kubernetes/pause:3.6
    imageID: sha256:7b178dc69474dd40a6471673c620079746e086c341b373fa723c09e043a5b911
    lastState: {}
    name: deployment-churn-999
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2023-06-12T18:23:20Z"
  - containerID: containerd://357978ecbe814300c35ae3e01001718151eb00b3a41af4d7aad34345d0adeaf3
    image: mcr.microsoft.com/oss/istio/proxyv2:1.17.2-distroless
    imageID: mcr.microsoft.com/oss/istio/proxyv2@sha256:dd9ba227a11bb9811f8b7cbee43d59134d89a0d2a155247f114c7c2cd9cc2952
    lastState: {}
    name: istio-proxy
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2023-06-12T18:23:20Z"
  hostIP: 10.224.41.146
  initContainerStatuses:
  - containerID: containerd://2a2393110e75b605f912dd43ce24aa2e5b437966ef8ac6e5bf5496237cd086bd
    image: mcr.microsoft.com/oss/istio/proxyv2:1.17.2-distroless
    imageID: mcr.microsoft.com/oss/istio/proxyv2@sha256:dd9ba227a11bb9811f8b7cbee43d59134d89a0d2a155247f114c7c2cd9cc2952
    lastState: {}
    name: istio-init
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: containerd://2a2393110e75b605f912dd43ce24aa2e5b437966ef8ac6e5bf5496237cd086bd
        exitCode: 0
        finishedAt: "2023-06-12T18:23:18Z"
        reason: Completed
        startedAt: "2023-06-12T18:23:18Z"
  phase: Running
  podIP: 10.224.41.147
  podIPs:
  - ip: 10.224.41.147
  qosClass: Burstable
  startTime: "2023-06-12T18:23:17Z"
