clusterloader2/testing/load/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: test
spec:
  hosts:
  - test-service.test.svc.cluster.local
